osi_langdir = $(datadir)/djvu/osi
dist_osi_lang_DATA = \
djvu/osi/languages.xml

osi_csdir = $(datadir)/djvu/osi/cs
dist_osi_cs_DATA = \
djvu/osi/cs/messages.xml

osi_dedir = $(datadir)/djvu/osi/de
dist_osi_de_DATA = \
djvu/osi/de/libdjvu++.xml \
djvu/osi/de/messages.xml

osi_endir = $(datadir)/djvu/osi/en
dist_osi_en_DATA = \
djvu/osi/en/djvutools-reference.xml \
djvu/osi/en/libdjvu++.xml \
djvu/osi/en/messages.xml

osi_frdir = $(datadir)/djvu/osi/fr
dist_osi_fr_DATA = \
djvu/osi/fr/libdjvu++.xml \
djvu/osi/fr/messages.xml

osi_jadir = $(datadir)/djvu/osi/ja
dist_osi_ja_DATA = \
djvu/osi/ja/libdjvu++.xml \
djvu/osi/ja/messages.xml

osi_zhdir = $(datadir)/djvu/osi/zh
dist_osi_zh_DATA = \
djvu/osi/zh/libdjvu++.xml \
djvu/osi/zh/messages.xml

dtddir = $(datadir)/djvu/pubtext
dist_dtd_DATA = \
djvu/pubtext/DjVuMessages.dtd \
djvu/pubtext/DjVuOCR.dtd \
djvu/pubtext/DjVuXML-s.dtd
